--- a/public/index.html.erb
+++ b/public/index.html.erb
@@ -31,7 +31,11 @@
   <img src="/images/food1.jpg">
 
   <dl>
-    <dt>Channa Masala - 5.95</dt>
+    <dt><%=item.name %>
+
+
+
+      Channa Masala - 5.95</dt>
     <dd>Yummy goodness</dd>
     
     <dt>Chicken Tikka Masala - 5.95</dt>
