--- a/public/index.html.erb
+++ b/public/index.html.erb
@@ -31,10 +31,10 @@
   <img src="/images/food1.jpg">
 
   <dl>
-    <% [Item.new("Channa Masala", 5.95, "Yummy goodness"), Item.new("Chicken Tikka Masala", 5.95, "Yummy goodness")].each do |item| %>
-                <dt><%= item.name %> - <%= item.price%></dt>
-                <dd><%= item.description %> </dd>
-            <% end %>
+    <%Menu.new.items.each do |item| %>
+        <dt><%= item.name %> - <%= item.price%></dt>
+        <dd><%= item.description %> </dd>
+    <% end %>
   </dl>
 </main>
 
