Added ability for web page to pull info from csv file, refactoring and adjustment of specs

--- a/public/index.html.erb
+++ b/public/index.html.erb
@@ -31,11 +31,12 @@
   <img src="/images/food1.jpg">
 
   <dl>
-    <% Menu.new.items.each do |item| %>
+    <% Menu.new(File.expand_path("./config/menu.csv")).items.each do |item| %>
         <dt><%= item.name %> - <%= item.price%></dt>
-        <dd><img src="/images/<%= item.image_link %>.jpg"> <br>
+        <dd><img src="/images/<%= item.image %>"> <br>
         <%= item.description %> </dd>
     <% end %>
+
   </dl>
 </main>
 
