--- a/public/index.html.erb
+++ b/public/index.html.erb
@@ -31,10 +31,14 @@
   <img src="/images/food1.jpg">
 
   <dl>
-    <% Menu.new(File.expand_path("./config/menu.csv")).items.each do |item| %>
-        <dt><%= item.name %> - <%= item.price%></dt>
-        <dd><img src="/images/<%= item.image %>"> <br>
-        <%= item.description %> </dd>
+    <% Menu.new(File.expand_path('./config/menu.csv')).items.each do |item| %>
+        <div class="menu">
+          <img class="small" src="/images/<%= item.image_name %>">
+
+          <div class="item"><p><%= item.name %> - $<%= item.price %></p>
+
+            <p> <%= item.description %></p></div>
+        </div>
     <% end %>
 
   </dl>
